@@ -81,9 +81,7 @@ public class AutoScalingGroupNameBuilder extends NameBuilder {
         labeledVars += generateIfSpecified(NameConstants.RED_BLACK_SWAP_KEY, redBlackSwap);
         labeledVars += generateIfSpecified(NameConstants.ZONE_KEY, zoneVar);
 
-        String result = combineAppStackDetail(appName, stack, detail) + labeledVars;
-
-        return result;
+        return combineAppStackDetail(appName, stack, detail) + labeledVars;
     }
 
     private static void validateDoesNotContainPush(String field, String name) {
@@ -108,11 +106,15 @@ public class AutoScalingGroupNameBuilder extends NameBuilder {
     }
 
     public static String buildNextGroupName(String asg) {
-        if (asg == null) throw new IllegalArgumentException("asg name must be specified");
+        if (asg == null) {
+            throw new IllegalArgumentException("asg name must be specified");
+        }
         Names parsed = Names.parseName(asg);
         Integer sequence = parsed.getSequence();
-        Integer nextSequence = new Integer((sequence == null) ? 0 : sequence.intValue() + 1);
-        if (nextSequence.intValue() >= 1000) nextSequence = new Integer(0); // Hack
+        Integer nextSequence = Integer.valueOf(sequence == null ? 0 : sequence.intValue() + 1);
+        if (nextSequence.intValue() >= 1000) {
+            nextSequence = Integer.valueOf(0); // Hack
+        }
         return String.format("%s-v%03d", parsed.getCluster(), nextSequence);
     }
 
